# elgamal_capsule

./: Cargo.toml  README.md
benches/: pubkey_benchmark.rs
src/: elgamal.rs  generic.rs  lib.rs  utils.rs
