[package]
name = "elgamal_capsule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
rug = {version = "1.14.1" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "pubkey_benchmark"
harness = false